# Platformer

./: LICENSE  README.md  game_map.py  main.py  map.txt  mapping.py  player.py  pyproject.toml  settings.py  test.py
camera_folder/: camera.py
game_map_folder/: game_map.py  map_editor.py  mapping.py
player_folder/: player.py
