[tool.poetry]
name = "platformer"
version = "0.0.1"
description = "First serious game in pygame."
authors = ["Pavlo-Lovchytskyi <pastet1990@icloud.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
